# Guess-what-hand

./: CMakeLists.txt  README.md  Source.cpp
Installer/: License_RUS.txt  test.iss
img/: App.rc
inc/: coin.hpp  hand.hpp
src/: coin.cpp  hand.cpp
